Add task role to Sphinx task definition

--- a/stacks/container-apps/root.yml
+++ b/stacks/container-apps/root.yml
@@ -14,7 +14,12 @@ Parameters:
     Type: String
   EnvironmentTypeAbbreviation:
     Type: String
-  # VPC ########################################################################
+  # Secrets ####################################################################
+  SecretsInstanceDecryptPolicyArn:
+    Type: String
+  SecretsInstanceAccessPolicyArn:
+    Type: String
+  # VPC #####
   VPC:
     Type: "AWS::EC2::VPC::Id"
   VPCSubnet1:
@@ -298,6 +303,8 @@ Resources:
         ContainerMemoryReservation: !Ref ContainerMemoryReservation
         ContainerCpu: !Ref ContainerCpu
         HealthCheckPath: "/sessions/new"
+        SecretsInstanceDecryptPolicyArn: !Ref SecretsInstanceDecryptPolicyArn
+        SecretsInstanceAccessPolicyArn: !Ref SecretsInstanceAccessPolicyArn
       Tags:
         - Key: "prx:cloudformation:stack-name"
           Value: !Ref AWS::StackName
