--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -322,6 +322,12 @@ Resources:
         SecretsBase:
           Fn::ImportValue:
             !Sub "${SecretsStackName}-SecretsBaseRegion"
+        SecretsInstanceDecryptPolicyArn:
+          Fn::ImportValue:
+            !Sub "${SecretsStackName}-SecretsInstanceDecryptPolicyArn"
+        SecretsInstanceAccessPolicyArn:
+          Fn::ImportValue:
+            !Sub "${SecretsStackName}-SecretsInstanceAccessPolicyArn"
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemory]
         ContainerMemoryReservation: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendMemoryReservation]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, BackendCpu]
