Add port 3000 to security group

--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -76,7 +76,7 @@ Resources:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
       VpcId: !Ref VPC
-      GroupDescription: Allow web and SSH traffic to the ALB
+      GroupDescription: Allow web and SSH traffic
       SecurityGroupIngress:
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
@@ -86,6 +86,10 @@ Resources:
           IpProtocol: tcp
           FromPort: 80
           ToPort: 80
+        - CidrIp: 0.0.0.0/0
+          IpProtocol: tcp
+          FromPort: 3000
+          ToPort: 3000
         - CidrIp: 0.0.0.0/0
           IpProtocol: tcp
           FromPort: 22
