Map port 80 to 3000

--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -414,7 +414,8 @@ Resources:
           MemoryReservation: !If [HasMemoryReservation, !Ref ContainerMemoryReservation, !Ref "AWS::NoValue"]
           Name: !Sub ${AppName}-web
           PortMappings:
-            - ContainerPort: !Ref ContainerPort
+            - HostPort: 80
+              ContainerPort: !Ref ContainerPort
             - ContainerPort: 9312
           Command:
             - web
