Only use port 3000 for health check

--- a/stacks/container-apps/sphinx-nlb.yml
+++ b/stacks/container-apps/sphinx-nlb.yml
@@ -184,6 +184,7 @@ Resources:
     DependsOn: NLB
     Properties:
       HealthCheckIntervalSeconds: 10
+      HealthCheckPort: "3000"
       HealthyThresholdCount: 3
       UnhealthyThresholdCount: 3
       Name: !Sub ${AppName}-${EnvironmentTypeAbbreviation}-${VPC}
@@ -414,8 +415,7 @@ Resources:
           MemoryReservation: !If [HasMemoryReservation, !Ref ContainerMemoryReservation, !Ref "AWS::NoValue"]
           Name: !Sub ${AppName}-web
           PortMappings:
-            - HostPort: 80
-              ContainerPort: !Ref ContainerPort
+            - ContainerPort: !Ref ContainerPort
             - ContainerPort: 9312
           Command:
             - web
