Add tags to CD pipeline

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -825,6 +825,13 @@ Resources:
                 - Name: InfrastructureRepoSourceArtifact
                 - Name: TemplateConfigStagingZipArtifact
               RunOrder: 5
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   # Pipeline S3 Trigger
   CdPipelineS3TriggerTrailStore:
     Type: "AWS::S3::Bucket"
