Add tags to AWS::ApiGateway::DomainName resources

--- a/ci/ci.yml
+++ b/ci/ci.yml
@@ -311,6 +311,13 @@ Resources:
     Properties:
       CertificateArn: !Ref CiCertificate
       DomainName: !Sub "api.${AWS::Region}.${AWS::StackName}.prx.tech"
+      Tags:
+        - Key: Project
+          Value: Infrastructure
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   RestApiDomainNameBasePathMapping:
     Type: 'AWS::ApiGateway::BasePathMapping'
     Properties:
