--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -224,6 +224,13 @@ Resources:
     Properties:
       CertificateArn: !Ref Certificate
       DomainName: tower.radiotopia.fm
+      Tags:
+        - Key: Project
+          Value: tower.radiotopia.fm
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   BasePathMapping:
     Type: AWS::ApiGateway::BasePathMapping
     Condition: CreateProductionResources
