--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -119,6 +119,15 @@ Resources:
     Properties:
       CertificateArn: !Ref WildcardCertificateArn
       DomainName: !Join ["", ["upload-", !Ref UploadRestApi, "-", !Ref "AWS::Region", !If [CreateStagingResources, ".staging", ""], ".prx.tech"]]
+      Tags:
+        - Key: Project
+          Value: upload.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   UploadRestApiBasePathMapping:
     Type: "AWS::ApiGateway::BasePathMapping"
     Properties:
