--- a/stacks/proxy.prx.org.yml
+++ b/stacks/proxy.prx.org.yml
@@ -176,6 +176,15 @@ Resources:
     Properties:
       CertificateArn: !Ref Certificate
       DomainName: !FindInMap [EnvironmentTypeMap, !Ref EnvironmentType, DomainName]
+      Tags:
+        - Key: Project
+          Value: proxy.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ProxyRestApiBasePathMapping:
     Type: "AWS::ApiGateway::BasePathMapping"
     Properties:
@@ -204,6 +213,15 @@ Resources:
     Properties:
       CertificateArn: !Ref Certificate
       DomainName: prx.org
+      Tags:
+        - Key: Project
+          Value: proxy.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ProductionRedirectRestApiBasePathMapping:
     Type: "AWS::ApiGateway::BasePathMapping"
     Condition: CreateProductionResources
@@ -217,6 +235,15 @@ Resources:
     Properties:
       CertificateArn: !Ref Certificate
       DomainName: www.prx.org
+      Tags:
+        - Key: Project
+          Value: proxy.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ProductionRestApiBasePathMapping:
     Type: "AWS::ApiGateway::BasePathMapping"
     Condition: CreateProductionResources
