Add tags to AWS::ApiGateway::RestApi resources

--- a/etc/squarespace-commerce-webhooks.yml
+++ b/etc/squarespace-commerce-webhooks.yml
@@ -24,6 +24,13 @@ Resources:
     Properties:
       Name: !Ref AWS::StackName
       Description: Stripe webhook callback endpoints
+      Tags:
+        - Key: Project
+          Value: Misc
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   RestApiWebhooksResource:
     Type: AWS::ApiGateway::Resource
     Properties:
