--- a/stacks/serverless/pixel.prx.org.yml
+++ b/stacks/serverless/pixel.prx.org.yml
@@ -133,6 +133,15 @@ Resources:
       Description: "API used by PRX Pixel Tracker Lambda"
       BinaryMediaTypes:
         - "image/gif"
+      Tags:
+        - Key: Project
+          Value: pixel.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   PixelRestApiResource:
     Type: "AWS::ApiGateway::Resource"
     Properties:
