--- a/stacks/serverless/tower.radiotopia.fm.yml
+++ b/stacks/serverless/tower.radiotopia.fm.yml
@@ -126,6 +126,15 @@ Resources:
     Properties:
       Name: !Ref AWS::StackName
       Description: !Sub "${EnvironmentType} tower.radiotopia.fm"
+      Tags:
+        - Key: Project
+          Value: tower.radiotopia.fm
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   ApiResource:
     Type: AWS::ApiGateway::Resource
     Properties:
