--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -30,6 +30,15 @@ Resources:
     Properties:
       Name: !Ref AWS::StackName
       Description: !Sub "${EnvironmentType} API used by PRX Upload Lambda"
+      Tags:
+        - Key: Project
+          Value: upload.prx.org
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   UploadRestApiSignatureResource:
     Type: "AWS::ApiGateway::Resource"
     Properties:
