--- a/etc/eventbrite-webhooks.yml
+++ b/etc/eventbrite-webhooks.yml
@@ -20,6 +20,13 @@ Resources:
     Properties:
       Name: !Ref AWS::StackName
       Description: Eventbrite webhook callback endpoints
+      Tags:
+        - Key: Project
+          Value: Misc
+        - Key: "prx:cloudformation:stack-name"
+          Value: !Ref AWS::StackName
+        - Key: "prx:cloudformation:stack-id"
+          Value: !Ref AWS::StackId
   RestApiWebhooksResource:
     Type: "AWS::ApiGateway::Resource"
     Properties:
