Fix record set comments

--- a/dns/studio360.org-hosted_zone.yml
+++ b/dns/studio360.org-hosted_zone.yml
@@ -24,7 +24,7 @@ Resources:
   Pantheon:
     Type: AWS::Route53::RecordSetGroup
     Properties:
-      Comment: WWW
+      Comment: Pantheon
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
@@ -119,7 +119,7 @@ Resources:
   Lync:
     Type: AWS::Route53::RecordSetGroup
     Properties:
-      Comment: Microsoft
+      Comment: Lync
       HostedZoneId: !Ref HostedZone
       RecordSets:
         - ResourceRecords:
