Fix hosted zone comment

--- a/dns/studio360.org-hosted_zone.yml
+++ b/dns/studio360.org-hosted_zone.yml
@@ -12,7 +12,7 @@ Resources:
     Type: AWS::Route53::HostedZone
     Properties:
       HostedZoneConfig:
-        Comment: Secondary Radiotopia domain
+        Comment: Studio 360 domain
       HostedZoneTags:
         - Key: Project
           Value: Studio 360
