--- a/dns/studio360.org-hosted_zone.yml
+++ b/dns/studio360.org-hosted_zone.yml
@@ -32,16 +32,12 @@ Resources:
           TTL: "3600"
           Type: A
           Name: !Ref Domain
-        # - ResourceRecords:
-        #     - "2620:12a:8000::3"
-        #   TTL: "3600"
-        #   Type: AAAA
-        #   Name: !Ref Domain
-        # - ResourceRecords:
-        #     - "2620:12a:8001::3"
-        #   TTL: "3600"
-        #   Type: AAAA
-        #   Name: !Ref Domain
+        - ResourceRecords:
+            - "2620:12a:8000:0:0:0:0:3"
+            - "2620:12a:8001:0:0:0:0:3"
+          TTL: "3600"
+          Type: AAAA
+          Name: !Ref Domain
         - ResourceRecords:
             - live-pri9.pantheonsite.io.
           TTL: "3600"
