Fix file commment

--- a/dns/studio360.org-hosted_zone.yml
+++ b/dns/studio360.org-hosted_zone.yml
@@ -1,4 +1,4 @@
-# dns/radiotopia.com-hosted_zone.yml
+# dns/studio360.org-hosted_zone.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Hosted zone and record sets for studio360.org
