Rename DovetailElixir/3 -> DovetailRouter

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -72,9 +72,9 @@ Parameters:
     Type: String
   DovetailSecretsVersion:
     Type: String
-  Dovetail3EcrImageTag:
+  DovetailRouterEcrImageTag:
     Type: String
-  Dovetail3SecretsVersion:
+  DovetailRouterSecretsVersion:
     Type: String
   ExchangeEcrImageTag:
     Type: String
@@ -731,8 +731,8 @@ Resources:
             !Sub "${SecretsStackName}-SecretsBaseRegion"
         DovetailEcrImageTag: !Ref DovetailEcrImageTag
         DovetailSecretsVersion: !Ref DovetailSecretsVersion
-        Dovetail3EcrImageTag: !Ref Dovetail3EcrImageTag
-        Dovetail3SecretsVersion: !Ref Dovetail3SecretsVersion
+        DovetailRouterEcrImageTag: !Ref DovetailRouterEcrImageTag
+        DovetailRouterSecretsVersion: !Ref DovetailRouterSecretsVersion
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, DovetailMemory]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, DovetailCpu]
       Tags:
