--- a/dns/prxu.org-hosted_zone.yml
+++ b/dns/prxu.org-hosted_zone.yml
@@ -74,12 +74,32 @@ Resources:
             DNSName: dualstack.infra-dovet-1jujps3p3xej3-652325001.us-east-1.elb.amazonaws.com.
             HostedZoneId: Z35SXDOTRQ7X7K
         - Type: A
+          Name: !Sub dovetail-router.${Domain}
+          AliasTarget:
+            DNSName: dualstack.infra-dovet-1jujps3p3xej3-652325001.us-east-1.elb.amazonaws.com.
+            HostedZoneId: Z35SXDOTRQ7X7K
+        - Type: AAAA
+          Name: !Sub dovetail-router.${Domain}
+          AliasTarget:
+            DNSName: dualstack.infra-dovet-1jujps3p3xej3-652325001.us-east-1.elb.amazonaws.com.
+            HostedZoneId: Z35SXDOTRQ7X7K
+        - Type: A
           Name: !Sub dovetail.staging.${Domain}
           AliasTarget:
             DNSName: dualstack.infra-dovet-1y2ncjszlrdmz-1988316390.us-east-1.elb.amazonaws.com.
             HostedZoneId: Z35SXDOTRQ7X7K
         - Type: AAAA
           Name: !Sub dovetail.staging.${Domain}
+          AliasTarget:
+            DNSName: dualstack.infra-dovet-1y2ncjszlrdmz-1988316390.us-east-1.elb.amazonaws.com.
+            HostedZoneId: Z35SXDOTRQ7X7K
+        - Type: A
+          Name: !Sub dovetail-router.staging.${Domain}
+          AliasTarget:
+            DNSName: dualstack.infra-dovet-1y2ncjszlrdmz-1988316390.us-east-1.elb.amazonaws.com.
+            HostedZoneId: Z35SXDOTRQ7X7K
+        - Type: AAAA
+          Name: !Sub dovetail-router.staging.${Domain}
           AliasTarget:
             DNSName: dualstack.infra-dovet-1y2ncjszlrdmz-1988316390.us-east-1.elb.amazonaws.com.
             HostedZoneId: Z35SXDOTRQ7X7K
