--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -198,7 +198,7 @@ Resources:
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt UploadLambdaIamRole.Arn
-      Runtime: nodejs8.10
+      Runtime: nodejs12.x
       Tags:
         - Key: Project
           Value: upload.prx.org
