Update root activity monitor event target ID

--- a/etc/root-account-activity-monitor.yml
+++ b/etc/root-account-activity-monitor.yml
@@ -232,4 +232,4 @@ Resources:
       State: ENABLED
       Targets:
         - Arn: !GetAtt LambdaFunction.Arn
-          Id: !Sub "${AWS::StackName}.LambdaTarget"
+          Id: !Sub "${AWS::AccountId}.${AWS::Region}.RootMonLambdaTarget"
