--- a/etc/root-account-activity-monitor.yml
+++ b/etc/root-account-activity-monitor.yml
@@ -140,7 +140,7 @@ Resources:
 
           SLACK_ICON = ':ops-cloudtrail:'
           SLACK_USERNAME = 'AWS CloudTrail'
-          SLACK_CHANNEL = '#ops-info'
+          SLACK_CHANNEL = '#ops-fatal'
 
           def lambda_handler(event, context):
               print(event)
