Update Commit Change Lambda

--- a/etc/commitchange-ses.yml
+++ b/etc/commitchange-ses.yml
@@ -59,6 +59,16 @@ Resources:
                   - "sns:Publish"
                 Resource:
                   - !Ref SlackMessageRelayTopicArn
+        - PolicyName: S3
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:getObject"
+                  - "s3:putObject"
+                Resource:
+                  - arn:aws:s3:::farski-sandbox-prx/2019-cc-count.txt
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
       Tags:
@@ -156,7 +166,7 @@ Resources:
                   icon = ':moneybag:';
               }
 
-              const text = `${icon}#${newCount} – ${name || 'Anonymous'}: $${amount} ${isRecurring ? '(monthly)' : ''}`;
+              const text = `${icon}#${newCount} – ${name || 'Anonymous'}: $${amount} ${isRecurring ? '(monthly) :calendar:' : ''}`;
 
               const campaignName = 'Radiotopia 2019 Fundraiser';
 
