User pipeline variables for nonces

--- a/cd/cd.yml
+++ b/cd/cd.yml
@@ -622,7 +622,7 @@ Resources:
                     "NotificationsStackName": "${InfrastructureNotificationsStackName}",
                     "SecretsStackName": "${SecretsStackName}",
                     "InfrastructureGitCommit": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]},
-                    "PipelineExecutionNonce": { "Fn::GetArtifactAtt" : ["InfrastructureRepoSourceArtifact", "ObjectKey"]}
+                    "PipelineExecutionNonce": "#{codepipeline.PipelineExecutionId}"
                   }
                 TemplateConfiguration: TemplateConfigStagingZipArtifact::staging.json
                 TemplatePath: InfrastructureRepoSourceArtifact::stacks/root.yml
@@ -737,7 +737,7 @@ Resources:
                     "NotificationsStackName": "${InfrastructureNotificationsStackName}",
                     "SecretsStackName": "${SecretsStackName}",
                     "InfrastructureGitCommit": { "Fn::GetParam" : ["RepoStateArtifact", "state.json", "commit"]},
-                    "PipelineExecutionNonce": { "Fn::GetArtifactAtt" : ["InfrastructureRepoSourceArtifact", "ObjectKey"]}
+                    "PipelineExecutionNonce": "#{codepipeline.PipelineExecutionId}"
                   }
                 RoleArn: !GetAtt CloudFormationIAMRole.Arn
                 StackName: !Sub ${AWS::StackName}-root-production
