--- a/stacks/serverless/upload.prx.org.yml
+++ b/stacks/serverless/upload.prx.org.yml
@@ -122,6 +122,7 @@ Resources:
           LoggingLevel: "INFO"
           MetricsEnabled: true
           ResourcePath: "/*"
+      TracingEnabled: true
   # Custom Domain
   UploadRestApiDomainName:
     Type: "AWS::ApiGateway::DomainName"
@@ -175,6 +176,7 @@ Resources:
       Path: "/"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+        - "arn:aws:iam::aws:policy/AWSXrayWriteOnlyAccess"
       Tags:
         - Key: Project
           Value: upload.prx.org
