--- a/stacks/ecs.yml
+++ b/stacks/ecs.yml
@@ -61,7 +61,7 @@ Mappings:
     Testing:
       InstanceType: t2.micro
       InstanceStorage: 22
-      AmiName: "amzn-ami-2018.03.w-amazon-ecs-optimized"
+      AmiName: "amzn-ami-2018.03.20191114-amazon-ecs-optimized"
       MinSize: "1"
       DefaultDesiredCapacity: "1"
       WarningThreshold: "2"
@@ -69,7 +69,7 @@ Mappings:
     Staging:
       InstanceType: t2.small
       InstanceStorage: 22
-      AmiName: "amzn-ami-2018.03.w-amazon-ecs-optimized"
+      AmiName: "amzn-ami-2018.03.20191114-amazon-ecs-optimized"
       MinSize: "2"
       DefaultDesiredCapacity: "5"
       WarningThreshold: "9"
